--- a/Source.css
+++ b/Source.css
@@ -24,7 +24,7 @@ html{
     width: 600px;
     height: 450px;
     display: grid;
-    background-image: url(Water_Surface.gif);
+    background-image: url(Page_Resources/Water_Surface.gif);
     box-shadow: inset 0 -3em 3em rgba(0, 73, 200, 0.3);
     border-radius: 5px;
     border-width: 5px;
