--- a/Source.css
+++ b/Source.css
@@ -14,11 +14,18 @@ html{
 .Homepage_Content{
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
+    grid-template-rows: 5% 95%;
     border-top-style: dashed;
     border-top-width: 2px;
     width: auto;
+    height: 600px;
     justify-items: center;
+}
+.Game_Name{
+    font-family: 'Courier New', Courier, monospace;
+    width: 100%;
+    display: grid;
+    justify-content: center;
 }
 .Project_Pond{
     width: 600px;
@@ -35,6 +42,14 @@ html{
     border-left-width: 2px;
     border-left-style: dashed;
     width: 100%;
+    height: 550px;
     display: grid;
-    justify-content: center;
+    grid-template-columns: 100%;
+    grid-template-rows: 10% 90%;
+}
+.Intro_Info{
+    font-family: 'Courier New', Courier, monospace;
+    justify-content:left;
+    padding-left: 10%;
+    padding-right: 10%;
 }
