--- a/Source.css
+++ b/Source.css
@@ -1,17 +1,17 @@
 html{
     background-color: rgb(253, 236, 217);
 }
-.Thin_Spacer{
+.thin_spacer{
     height:15px;
     width:100%;
 }
-.Homepage_Title{
+.homepage_title{
     font-family:'Courier New', Courier, monospace;
     display: grid;
     width: 100%;
     justify-content: center;
 }
-.Homepage_Content{
+.homepage_content{
     display: grid;
     grid-template-columns: 50% 50%;
     border-top-style: dashed;
@@ -22,17 +22,17 @@ html{
     height: auto;
     justify-items: center;
 }
-.Game_Name{
+.game_name{
     font-family: 'Courier New', Courier, monospace;
     width: 100%;
     display: grid;
     justify-content: center;
 }
-.Pond_Game{
+.pond_game{
     width: 80%;
     height: 100%;
 }
-.Project_Pond{
+.project_pond{
     align-self: center;
     padding-top: 10%;
     width: 100%;
@@ -46,10 +46,10 @@ html{
     border-style: solid;
     border-color: rgb(140, 53, 34);
 }
-.Project_Checkbox{
+.project_checkbox{
     appearance: none;
 }
-@keyframes Project1_Swim {
+@keyframes project1_swim {
     from {
     transform: translateX(0%);
     }
@@ -58,12 +58,12 @@ html{
     transform: translateX(100%);
     }
 }
-.Swimming_Project{
+.swimming_project{
     height: 50px;
     width: auto;
     opacity: .75;
 }
-.Main_Info{
+.main_info{
     border-left-width: 2px;
     border-left-style: dashed;
     width: 100%;
@@ -72,9 +72,25 @@ html{
     grid-template-columns: 100%;
     grid-template-rows: 10% 90%;
 }
-.Intro_Info{
+.intro_info{
     font-family: 'Courier New', Courier, monospace;
     justify-content:left;
     padding-left: 10%;
     padding-right: 10%;
+}
+.document_grid{
+    padding-left: 0%;
+    padding-right: 0%;
+    display: grid;
+    grid-template-columns: 5% 30% 30% 30% 5%;
+    grid-template-rows: 100%;
+}
+.document{
+    display: grid;
+}
+.document_thumbnails{
+    display: block;
+    justify-self: center;
+    height:auto;
+    width:80%;
 }
